# opendatalab-python-sdk

./: .gitignore  FUTURE-API.md  LICENSE  README.md  Untitled-1.ipynb  setup.cfg  setup.py
opendatalab/: __init__.py  __main__.py  __version__.py  api.py  client.py  dataset.py  download.py  exception.py  exceptions.py  py.typed  utils.py
opendatalab/cli/: __init__.py  cmd.py  config.py  custom.py  get.py  get_old.py  info.py  login.py  logout.py  ls.py  policy.py  search.py  upgrade.py  utility.py
opendatalab/client/: __init__.py  api.py  client.py  downloader.py  uaa.py
opendatalab/dataset/: __init__.py  dataset.py
tests/: demo.py  sample.py  standard_test.py  test_dataset.py  uaa_test.py
