#
# Copyright 2022 Shanghai AI Lab. Licensed under MIT License.
#

[metadata]
name = opendatalab
url = https://gitlab.shlab.tech/dps/opendatalab-python-sdk/-/tree/dev-datahub
author = opendatalab
author_email = wangrui@pjlab.org.cn
license = MIT
license_file = LICENSE
keywords = opendatalab, dataset
description = OpenDataLab Python SDK
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Typing :: Typed

[options]
packages = find:
python_requires = >=3.6
install_requires =
    click >= 7.0.0
    filetype >= 1.0.0
    numpy >= 1.20.0, <= 1.20.3; python_version >= '3.7'
    numpy >= 1.16.0; python_version < '3.7'
    numpy-quaternion >= 2021.3.17.16.51.43, <= 2021.11.4.15.26.3
    requests >= 2.4.2
    tqdm >= 4.14.0
    typing_extensions >= 3.7.2
    oss2

[options.packages.find]
include = opendatalab*
exclude = *.tests

[options.package_data]
opendatalab =
    py.typed
[options.entry_points]
console_scripts = opendatalab = opendatalab.cli.cmd:cli
