#
# Copyright 2022 Shanghai AI Lab. Licensed under MIT License.
#

[metadata]
name = opendatalab
url = https://github.com/opendatalab/opendatalab-python-sdk
author = OpenDataLab
author_email = OpenDataLab@pjlab.org.cn
license = MIT
license_file = LICENSE
keywords = opendatalab, dataset, test
description = OpenDataLab Python SDK
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Typing :: Typed

[options]
packages = find:
python_requires = >=3.7
install_requires =
    pycryptodome
    click >= 7.0.0
    requests >= 2.4.2
    tqdm
    colorama
    rich
    pywin32; platform_system == "Windows"

[options.packages.find]
include = opendatalab*
exclude = *.tests

[options.package_data]
opendatalab =
    py.typed
[options.entry_points]
console_scripts = odl = opendatalab.cli.cmd:cli